# MapleJuice

./: .gitignore  Cargo.toml  README.md
apps/: run_condorcet.sh  run_us_household_income.sh  run_word_count.sh
apps/condorcet/: generate_data.py  run_hadoop.sh
apps/condorcet/hadoop/: map2.py  reduce1.py  reduce2.py
apps/condorcet/maplejuice/: juice1.py  juice2.py  maple1.py
apps/us-household-income/: get_data.sh  run_hadoop.sh
apps/us-household-income/hadoop/: reduce1.py
apps/us-household-income/maplejuice/: juice1.py  maple1.py
apps/word_count/: juice.sh  maple.sh
apps/word_count/data/: 1.txt  2.txt
libheartbeat/: Cargo.toml
libheartbeat/src/: command.rs  heartbeat.rs  lib.rs  member.rs  message.rs
libmj/: Cargo.toml
libmj/src/: client.rs  daemon.rs  lib.rs  request.rs  task.rs
libsdfs/: Cargo.toml
libsdfs/src/: client.rs  daemon.rs  fs.rs  index.rs  lib.rs  message.rs
libutils/: Cargo.toml
libutils/src/: lib.rs  logger.rs  net.rs  partition.rs  time.rs
mj-client/: Cargo.toml
mj-client/src/: main.rs
mj-server/: Cargo.toml
mj-server/src/: main.rs
