[package]
name = "libsdfs"
version = "0.1.0"
authors = ["James Wang <jameswang9909@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.116"
libutils = { path = "../libutils" }
libheartbeat = { path = "../libheartbeat" }
