[package]
name = "libutils"
version = "0.1.0"
authors = ["James Wang <jameswang9909@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.4"
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
tokio = { version = "0.3.1", features = ["full"] }
slog-term = "2.6.0"
simplelog = "0.8.0"
log = "0.4.11"
anyhow = "1.0.33"
