[package]
name = "mj-server"
version = "0.1.0"
authors = ["James Wang <jameswang9909@hotmail.com>", "Rishi Desai <desai.rishi1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
libheartbeat = { path = "../libheartbeat" }
libmj = { path = "../libmj" }
libsdfs = { path = "../libsdfs" }
libutils = { path = "../libutils" }
